--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 theme: jekyll-theme-minimal
 title: Jinduo Liu (刘金铎)
 description: Jinduo AT bjut DOT edu DOT cn
-
-
+logo: /logo.jpg
+show_downloads: false
+google_analytics:
