--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ title: Jinduo Liu (刘金铎)
 description: Jinduo AT bjut DOT edu DOT cn
 logo: /logo.jpg
 show_downloads: false
-google_analytics:
+google_analytics: [Google Scolor](https://scholar.google.com/citations?hl=zh-CN&user=dJIbKxkAAAAJ)
