--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 theme: jekyll-theme-minimal
 title: Jinduo Liu (刘金铎)
 description: Jinduo AT bjut DOT edu DOT cn
-show_downloads: false
+show_downloads: False
+logo: /logo.jpg
